<resources>
    <string name="app_name">Project Management</string>
    <string name="error_message">Error Code : $s1\nMessage : $s2</string>
    <string name="restful_user_config_not_set">User configuration not set.</string>
    <string name="restful_server_url_config_not_set">Server URL configuration not set.</string>
    <string name="restful_server_url_not_valid">URL \'$s1\' is not valid.</string>
    <string name="restful_message_error_response_json">Unknown JSON response.</string>
    <string name="restful_message_error_400">Server understood the request but request content was invalid.</string>
    <string name="restful_message_error_401">Unauthorised access.</string>
    <string name="restful_message_error_403">Forbidden resource can\'t be accessed.</string>
    <string name="restful_message_error_404">Requested not found.</string>
    <string name="restful_message_error_500">Internal server error.</string>
    <string name="restful_message_error_503">Service unavailable.</string>
    <string name="restful_message_error_code">Code : $s1</string>
    <string name="restful_message_error_message">$s1</string>
    <string name="date_picker_select_day">Day</string>
    <string name="date_picker_select_month">Month</string>
    <string name="date_picker_select_year">Year</string>
    <string name="menu_home_title">Home</string>
    <string name="menu_inbox_title">Inbox</string>
    <string name="menu_project_title">Projects</string>
    <string name="menu_inspector_title">Monitoring</string>
    <string name="menu_manager_title">Update Task Progress</string>
    <string name="menu_request_report_title">Request Report</string>
    <string name="menu_user_title">User</string>
    <string name="menu_profile_title">Profile</string>
    <string name="menu_change_password_title">Change Password</string>
    <string name="menu_logout_title">Logout</string>
    <string name="main_layout_request_report_menu_add">Add Request Report</string>
    <string name="network_unknown_response_expected">Unknown response expected.</string>
    <string name="main_drawer_open">open_drawer</string>
    <string name="main_drawer_close">close_drawer</string>
    <string name="session_handle_task_handle_access_token">Access token handle &#8230;</string>
    <string name="session_handle_task_handle_user_project_member">User info handle &#8230;</string>
    <string name="session_handle_task_finish">Session handle finish.</string>
    <string name="login_handle_task_begin">Signing in &#8230;</string>
    <string name="login_handle_task_success">Signed in</string>
    <string name="login_first_handle_task_begin">Password changing &#8230;</string>
    <string name="login_first_handle_task_success">Password changed.</string>
    <string name="forget_password_handle_task_begin">Sending reset password request &#8230;</string>
    <string name="forget_password_handle_task_success">Request reset password was sent.</string>
    <string name="logout_handle_task_begin">Signing out &#8230;</string>
    <string name="logout_handle_task_success">Signed out</string>
    <string name="user_change_password_handle_task_begin">Password changing &#8230;</string>
    <string name="user_change_password_handle_task_success">Password changed.</string>
    <string name="user_change_profile_handle_task_begin">Profile changing &#8230;</string>
    <string name="user_change_profile_handle_task_success">Profile changed.</string>
    <string name="project_list_handle_task_begin">Getting projects &#8230;</string>
    <string name="project_list_handle_task_success">Getting projects finished.</string>
    <string name="project_handle_task_begin">Getting project &#8230;</string>
    <string name="project_handle_task_success">Getting project finished.</string>
    <string name="project_stage_handle_task_begin">Getting project stage &#8230;</string>
    <string name="project_stage_handle_task_success">Getting project stage finished.</string>
    <string name="project_stage_assign_comment_handle_task_begin">Getting project stage assign comments &#8230;</string>
    <string name="project_stage_assign_comment_handle_task_success">Getting project stage assign comments finished.</string>
    <string name="project_plan_handle_task_begin">Getting project plan &#8230;</string>
    <string name="project_plan_handle_task_success">Getting project plan finished.</string>
    <string name="notification_list_handle_task_begin">Getting notification &#8230;</string>
    <string name="notification_list_handle_task_success">Getting notification finished.</string>
    <string name="notification_read_handle_task_begin">Marking notification as read &#8230;</string>
    <string name="notification_read_handle_task_success">Notification marked as read.</string>
    <string name="notification_read_handle_task_success_pending">Notification marked as read pending.</string>
    <string name="notification_read_handle_task_failed">Notification mark as read failed. $s1</string>
    <string name="notification_read_handle_task_finish">Notification marked as read finished.</string>
    <string name="inspector_activity_list_handle_task_begin">Getting activities &#8230;</string>
    <string name="inspector_activity_list_handle_task_success">Getting activities finished.</string>
    <string name="inspector_activity_get_handle_task_begin">Getting activity &#8230;</string>
    <string name="inspector_activity_get_handle_task_success">Getting activity finished.</string>
    <string name="inspector_activity_monitoring_list_handle_task_begin">Getting monitoring activities &#8230;</string>
    <string name="inspector_activity_monitoring_list_handle_task_success">Getting monitoring activities finished.</string>
    <string name="inspector_activity_monitoring_detail_handle_task_begin">Getting monitoring activity &#8230;</string>
    <string name="inspector_activity_monitoring_detail_handle_task_success">Getting monitoring activity finished.</string>
    <string name="manager_activity_list_handle_task_begin">Getting activities &#8230;</string>
    <string name="manager_activity_list_handle_task_success">Getting activities finished.</string>
    <string name="manager_activity_get_handle_task_begin">Getting activity &#8230;</string>
    <string name="manager_activity_get_handle_task_success">Getting activity finished.</string>
    <string name="manager_activity_monitoring_list_handle_task_begin">Getting monitoring activities &#8230;</string>
    <string name="manager_activity_monitoring_list_handle_task_success">Getting monitoring activities finished.</string>
    <string name="manager_activity_update_list_handle_task_begin">Getting update activities &#8230;</string>
    <string name="manager_activity_update_list_handle_task_success">Getting update activities finished.</string>
    <string name="project_activity_dashboard_list_handle_task_begin">Getting project activity dashboard &#8230;</string>
    <string name="project_activity_dashboard_list_handle_task_success">Getting project activity dashboard finished.</string>
    <string name="file_handle_task_progress_size">$s1</string>
    <string name="file_handle_task_progress_percent_size">$s1 ($s2)</string>
    <string name="file_info_handle_task_begin">Getting file info &#8230;</string>
    <string name="file_info_handle_task_success">Getting file info finished.</string>
    <string name="report_request_list_handle_task_begin">Getting report requests &#8230;</string>
    <string name="report_request_list_handle_task_success">Getting report requests finished.</string>
    <string name="manager_activity_update_save_handle_task_begin">Saving update &#8230;</string>
    <string name="manager_activity_update_save_handle_task_success">Update saved.</string>
    <string name="manager_activity_update_save_handle_task_success_pending">Update saved as pending.</string>
    <string name="manager_activity_update_save_handle_task_failed">Update save failed. $s1</string>
    <string name="manager_activity_update_save_handle_task_finish">Update saved.</string>
    <string name="project_stage_assign_comment_save_handle_task_begin">Saving comment &#8230;</string>
    <string name="project_stage_assign_comment_save_handle_task_success">Comment saved.</string>
    <string name="project_stage_assign_comment_save_handle_task_success_pending">Comment saved as pending.</string>
    <string name="project_stage_assign_comment_save_handle_task_failed">Comment save failed. $s1</string>
    <string name="project_stage_assign_comment_save_handle_task_finish">Comment saved.</string>
    <string name="inspector_project_activity_monitoring_save_handle_task_begin">Saving comment &#8230;</string>
    <string name="inspector_project_activity_monitoring_save_handle_task_success">Comment saved.</string>
    <string name="inspector_project_activity_monitoring_save_handle_task_success_pending">Comment saved as pending.</string>
    <string name="inspector_project_activity_monitoring_save_handle_task_failed">Comment save failed. $s1</string>
    <string name="inspector_project_activity_monitoring_save_handle_task_finish">Comment saved.</string>
    <string name="report_request_send_handle_task_begin">Send request &#8230;</string>
    <string name="report_request_send_handle_task_success">Request sent.</string>
    <string name="report_request_send_handle_task_success_pending">Send request saved as pending.</string>
    <string name="report_request_send_handle_task_failed">Send request failed. $s1</string>
    <string name="report_request_send_handle_task_finish">Request sent.</string>
    <string name="report_request_resend_handle_task_begin">Resend request &#8230;</string>
    <string name="report_request_resend_handle_task_success">Request resent.</string>
    <string name="report_request_resend_handle_task_success_pending">Resend request saved as pending.</string>
    <string name="report_request_resend_handle_task_failed">Resend request failed. $s1</string>
    <string name="report_request_resend_handle_task_finish">Request resent.</string>
    <string name="image_shadow_description">Shadow</string>
    <string name="image_logo_description">Application Logo</string>
    <string name="splash_layout_loading">Loading &#8230;</string>
    <string name="system_authentication_login_view_login">Login</string>
    <string name="system_authentication_login_view_login_required">Login is required.</string>
    <string name="system_authentication_login_view_password">Password</string>
    <string name="system_authentication_login_view_ok">Login</string>
    <string name="system_authentication_login_view_forget_password">Forget Password ?</string>
    <string name="system_authentication_login_first_view_password_new">New Password</string>
    <string name="system_authentication_login_first_view_password_new_confirm">Confirm New Password</string>
    <string name="system_authentication_login_first_view_ok">Set Now</string>
    <string name="user_change_profile_view_email">Email</string>
    <string name="user_change_profile_view_name">Name</string>
    <string name="user_change_profile_view_phone_number">Phone Number</string>
    <string name="user_change_profile_view_description">Description</string>
    <string name="user_change_profile_view_ok">Update Now</string>
    <string name="notification_detail_project_stage">Stage</string>
    <string name="notification_detail_manager_project_activity">Update</string>
    <string name="notification_detail_inspector_project_activity">Monitoring</string>
    <string name="project_activity_monitoring_actual_start_date">Start Date</string>
    <string name="project_activity_monitoring_actual_end_date">End Date</string>
    <string name="project_activity_monitoring_activity_status">Status</string>
    <string name="project_activity_monitoring_percent_complete">Percentage ($s1)</string>
    <string name="project_activity_monitoring_comment">Comment</string>
</resources>