<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/loginLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="@dimen/form_element_vertical_gap">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/system_authentication_login_view_login"
            android:maxLines="1"
            android:singleLine="true" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/passwordLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/loginLayout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="@dimen/form_element_vertical_gap">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/system_authentication_login_view_password"
            android:maxLines="1"
            android:singleLine="true"
            android:password="true" />
    </android.support.design.widget.TextInputLayout>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/loginButton"
        android:layout_height="wrap_content"
        android:layout_width="150dp"
        android:layout_below="@+id/passwordLayout"
        android:text="@string/system_authentication_login_view_ok"
        android:layout_marginTop="@dimen/form_element_vertical_gap"
        android:layout_centerHorizontal="true" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/forgetPasswordButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/loginButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/form_element_vertical_gap"
        android:text="@string/system_authentication_login_view_forget_password" />

</RelativeLayout>