<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/emailLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="@dimen/form_element_vertical_gap">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_change_profile_view_email"
            android:maxLines="1"
            android:singleLine="true"
            android:inputType="none"
            android:editable="false"
            android:textIsSelectable="true" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/memberNameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/emailLayout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="@dimen/form_element_vertical_gap">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/memberName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_change_profile_view_name"
            android:maxLines="1"
            android:singleLine="true"
            android:inputType="textPersonName" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/phoneNumberLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/memberNameLayout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="@dimen/form_element_vertical_gap">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/phoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_change_profile_view_phone_number"
            android:maxLines="1"
            android:singleLine="true"
            android:inputType="phone"
            android:phoneNumber="true" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/descriptionLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/phoneNumberLayout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="@dimen/form_element_vertical_gap">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_change_profile_view_description"
            android:maxLines="3"
            android:singleLine="false"
            android:inputType="textMultiLine" />
    </android.support.design.widget.TextInputLayout>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/changeProfileButton"
        android:layout_height="wrap_content"
        android:layout_width="150dp"
        android:layout_below="@+id/descriptionLayout"
        android:text="@string/user_change_profile_view_ok"
        android:layout_centerHorizontal="true" />

</RelativeLayout>