<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/passwordNewLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/passwordNew"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true"
            android:password="true"
            android:hint="@string/system_authentication_login_first_view_password_new" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/passwordNewConfirmLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/passwordNewLayout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="@dimen/form_element_vertical_gap">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/passwordNewConfirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true"
            android:password="true"
            android:hint="@string/system_authentication_login_first_view_password_new_confirm" />

    </android.support.design.widget.TextInputLayout>

    <com.construction.pm.libraries.widgets.AppDrawableCompatButton
        android:id="@+id/newPasswordButton"
        android:layout_height="wrap_content"
        android:layout_width="150dp"
        android:layout_below="@+id/passwordNewConfirmLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/form_element_vertical_gap"
        app:drawableLeftCompat="@drawable/ic_checkmark_light_24"
        android:text="@string/system_authentication_login_first_view_ok" />

</RelativeLayout>