<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/actualStartDateContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/actualStartDateLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:text="@string/project_activity_monitoring_actual_start_date" />

        <com.construction.pm.libraries.widgets.DatePickerView
            android:id="@+id/actualStartDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/actualStartDateLabel" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/actualEndDateContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/actualStartDateContainer">

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/actualEndDateLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:text="@string/project_activity_monitoring_actual_end_date" />

        <com.construction.pm.libraries.widgets.DatePickerView
            android:id="@+id/actualEndDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/actualEndDateLabel" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/activityStatusContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/actualEndDateContainer">

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/activityStatusLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:text="@string/project_activity_monitoring_activity_status" />

        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/activityStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/activityStatusLabel" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/percentCompleteContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/activityStatusContainer"
        android:layout_alignRight="@+id/activityStatusContainer"
        android:layout_alignEnd="@+id/activityStatusContainer">

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/percentCompleteLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:text="@string/project_activity_monitoring_percent_complete" />

        <SeekBar
            android:id="@+id/percentComplete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/percentCompleteLabel"
            android:max="100"
            style="@style/Widget.AppCompat.SeekBar" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/commentContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/percentCompleteContainer">

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/commentLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:text="@string/project_activity_monitoring_comment" />

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/comment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/commentLabel"
            android:text="TextView"
            android:singleLine="false" />

    </RelativeLayout>

</RelativeLayout>