<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/gap">

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/notificationDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textStyle="normal|bold"
        android:ellipsize="end"
        android:singleLine="true"
        android:text="" />

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/notificationDate"
        android:layout_above="@+id/buttonContainer"
        android:layout_marginTop="@dimen/gap"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/notificationMessage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:text="" />

        </RelativeLayout>

    </android.support.v4.widget.NestedScrollView>

    <LinearLayout
        android:id="@+id/buttonContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="@dimen/gap"
        android:orientation="horizontal">

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/projectStage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/notification_detail_project_stage"/>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/managerProjectActivity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/notification_detail_manager_project_activity"/>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/inspectorProjectActivity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/notification_detail_inspector_project_activity"/>

    </LinearLayout>

</RelativeLayout>